--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "ejs": "^2.6.1",
     "express": "^4.16.4",
+    "express-sslify": "^1.2.0",
     "mongoose": "^5.3.13",
     "request": "^2.88.0",
     "sweetalert2": "^7.29.1"
